Bug 1631615 - Don't color manage PNG/JPG/WebP if not tagged. r=tnikkel

It appears some websites assume we will not color manage untagged images
and encode metadata in the image's surface data. Chrome matches this
behaviour. We should probably do the same for webcompat.

Differential Revision: https://phabricator.services.mozilla.com/D73737