image/test/gtest/TestDecodeToSurface.cpp
@@ -44,14 +44,16 @@ class DecodeToSurfaceRunnable : public Runnable {
       outputSize.emplace(mTestCase.mOutputSize);
     }
 
+    uint32_t flags = FromSurfaceFlags(mTestCase.mSurfaceFlags);
+
     if (mImageBuffer) {
       mSurface = ImageOps::DecodeToSurface(
-          mImageBuffer, nsDependentCString(mTestCase.mMimeType),
-          imgIContainer::DECODE_FLAGS_DEFAULT, outputSize);
+          mImageBuffer, nsDependentCString(mTestCase.mMimeType), flags,
+          outputSize);
     } else {
       mSurface = ImageOps::DecodeToSurface(
-          mInputStream.forget(), nsDependentCString(mTestCase.mMimeType),
-          imgIContainer::DECODE_FLAGS_DEFAULT, outputSize);
+          mInputStream.forget(), nsDependentCString(mTestCase.mMimeType), flags,
+          outputSize);
     }
     ASSERT_TRUE(mSurface != nullptr);
 
